fix: solve text overflow from input area

--- a/type-frontend/src/App.css
+++ b/type-frontend/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'JetBrains Mono', monospace;
-  background-color: #2c2c2c;
+  background-color: #2C2D30;
   color: #d1d0c5;
 }
 
@@ -430,8 +430,7 @@ body {
   gap: 12px;
   color: #e2b714;
   font-family: inherit;
-  padding: 2px;
-  margin-top: -100px;
+  padding: 20px;
 }
 
 .loading-icon {
